--- a/style.css
+++ b/style.css
@@ -34,12 +34,12 @@ body{
     margin:0;
 }
 header{
-    display:flex;
-    justify-content: space-between;
+    display:grid;
+    grid-template-columns: repeat(3, 1fr);
     text-align: center;
     align-items: center;
     margin:30px 20%;
-    height:50px;
+    height:75px;
     position: sticky;
 }
 #logo{
@@ -142,9 +142,10 @@ h2{
     background-color: light-dark(var(--white),var(--black));
     border:none;
     font-size:15px;
-    margin-left:5px;
     transition:var(--transition);
-    border-radius:30px;
+    border-radius:60px;
+    margin-left:4px;
+    margin-right:4px;
     padding:10px 15px;
 }
 .question:hover{border-radius:5px;}
@@ -245,4 +246,78 @@ footer{
     border-radius:50%;
     z-index:1;
     pointer-events: none;
+}
+
+@media screen and (max-width: 1000px) {
+    body, body div, body div div, #edit div{
+        text-align: center;
+    }
+    body{
+        margin:5px;
+    }
+    h1{
+        font-size:50px;
+    }
+    h2{
+        font-size:40px;
+    }
+    h3{
+        font-weight:700;
+        font-size:26px;
+    }
+
+    #edit{
+        display:flex;
+        flex-direction: column-reverse;
+        text-align: center;
+        
+    }
+    .image{
+        width:600px;
+        height:auto;
+    }
+    p{
+        font-size:13px;
+    }
+
+    header{
+        margin-left:0;
+        margin-right:0;
+    }
+
+    #header__buttons button{
+        background-color: light-dark(var(--white),var(--black));
+        border:none;
+        font-size:15px;
+        transition:var(--transition);
+        border-radius:60px;
+        margin-left:4px;
+        margin-right:4px;
+        padding-bottom:none;
+        padding:7px 14px;
+        transform:none;
+        margin-bottom:none;
+    }
+    
+    #header__buttons button:hover{
+        transform:none;
+        border-radius:3px;
+        padding:7px 14px;
+        color:light-dark(var(--white),var(--black));
+        background-color: light-dark(var(--black),var(--white));
+    }
+    #header__buttons button:active{
+        transition: 50ms;
+        transform:translateY(4px);
+    }
+
+}
+@media screen and (max-width:700px){
+    .image{
+        width:400px;
+        height:auto;
+    }
+    header{
+        height:200px;
+    }
 }
